tests/golden/errors/del_attribute.py
class C:
    def __init__(self) -> None:
        self.x: int = 1
c = C()
del c.x
